--- a/BookingServiceApi/appsettings.json
+++ b/BookingServiceApi/appsettings.json
@@ -1,5 +1,6 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BookingServiceDb;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BookingServiceDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "ScheduleServiceBaseUrl": "https://localhost:7214"
 }
