--- a/.github/workflows/main_grupp14-bookingservice.yml
+++ b/.github/workflows/main_grupp14-bookingservice.yml
@@ -24,10 +24,10 @@ jobs:
           dotnet-version: '9.x'
 
       - name: Build with dotnet
-        run: dotnet build ./BookingService/BookingService.sln --configuration Release
+        run: dotnet build ./BookingService.sln --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish ./BookingService/BookingService.sln -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish ./BookingService.sln -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -64,3 +64,4 @@ jobs:
           package: .
 
           
+
