auth is now active

--- a/.gitignore
+++ b/.gitignore
@@ -429,3 +429,4 @@ FodyWeavers.xsd
 
 /BookingService/BookingServiceApi/appsettings.json
 /BookingService/BookingServiceApi/appsettings.Development.json
+/BookingServiceApi/appsettings.json
