--- a/.github/workflows/main_grupp14-bookingservice.yml
+++ b/.github/workflows/main_grupp14-bookingservice.yml
@@ -47,6 +47,15 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
+
+      - name: Apply EF Core migrations
+        run: |
+          dotnet tool install --global dotnet-ef
+          dotnet ef database update --project BookingService/BookingServiceApi/BookingServiceApi.csproj \
+                                    --startup-project BookingService/BookingServiceApi/BookingServiceApi.csproj \
+                                    --connection "${{ secrets.AZURE_SQL_CONNECTION }}"
+        env:
+          PATH: ${{ env.PATH }}:/home/runner/.dotnet/tools
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -64,4 +73,5 @@ jobs:
           package: .
 
           
+
 
