--- a/.github/workflows/main_grupp14-bookingservice.yml
+++ b/.github/workflows/main_grupp14-bookingservice.yml
@@ -51,9 +51,8 @@ jobs:
       - name: Apply EF Core migrations
         run: |
           dotnet tool install --global dotnet-ef
+          $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
           dotnet ef database update --project BookingService/BookingServiceApi/BookingServiceApi.csproj --startup-project BookingService/BookingServiceApi/BookingServiceApi.csproj --connection "${{ secrets.AZURE_SQL_CONNECTION }}"
-        env:
-          PATH: ${{ env.PATH }}:/home/runner/.dotnet/tools
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -71,6 +70,7 @@ jobs:
           package: .
 
           
+
 
 
 
