--- a/.github/workflows/main_grupp14-bookingservice.yml
+++ b/.github/workflows/main_grupp14-bookingservice.yml
@@ -52,7 +52,7 @@ jobs:
         run: |
           dotnet tool install --global dotnet-ef
           $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
-          dotnet ef database update --project BookingService/BookingServiceApi/BookingServiceApi.csproj --startup-project BookingService/BookingServiceApi/BookingServiceApi.csproj --connection "${{ secrets.AZURE_SQL_CONNECTION }}"
+          dotnet ef database update --project BookingService.sln --startup-project ./BookingServiceApi/BookingServiceApi.csproj --connection "${{ secrets.AZURE_SQL_CONNECTION }}"
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -70,6 +70,7 @@ jobs:
           package: .
 
           
+
 
 
 
