--- a/.github/workflows/main_grupp14-bookingservice.yml
+++ b/.github/workflows/main_grupp14-bookingservice.yml
@@ -49,7 +49,8 @@ jobs:
           name: .net-app
 
       - name: List solution files
-        run: dir /s /b *.sln
+        run: |
+          Get-ChildItem -Path . -Recurse -Filter *.sln | ForEach-Object { $_.FullName }
 
       - name: Apply EF Core migrations
         run: |
@@ -74,6 +75,7 @@ jobs:
           package: .
 
           
+
 
 
 
