--- a/.github/workflows/main_grupp14-bookingservice.yml
+++ b/.github/workflows/main_grupp14-bookingservice.yml
@@ -56,7 +56,7 @@ jobs:
         run: |
           dotnet tool install --global dotnet-ef --version 9.0.9
           $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
-          dotnet ef database update --project ./Data/data.csproj --startup-project ./BookingServiceApi/BookingServiceApi.csproj --connection "${{ secrets.AZURE_SQL_CONNECTION }}"
+          dotnet ef database update --project ./Data/Data.csproj --startup-project ./BookingServiceApi/BookingServiceApi.csproj --connection "${{ secrets.AZURE_SQL_CONNECTION }}"
 
       
       - name: Login to Azure
@@ -75,6 +75,7 @@ jobs:
           package: .
 
           
+
 
 
 
