--- a/.github/workflows/main_grupp14-bookingservice.yml
+++ b/.github/workflows/main_grupp14-bookingservice.yml
@@ -48,15 +48,12 @@ jobs:
         with:
           name: .net-app
 
-      - name: List solution files
-        run: |
-          Get-ChildItem -Path . -Recurse -Filter *.sln | ForEach-Object { $_.FullName }
 
       - name: Apply EF Core migrations
         run: |
           dotnet tool install --global dotnet-ef --version 9.0.9
           $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
-          dotnet ef database update --project ./Data/Data.csproj --startup-project ./BookingServiceApi/BookingServiceApi.csproj --connection "${{ secrets.AZURE_SQL_CONNECTION }}"
+          dotnet ef database update --project Data/Data.csproj --startup-project BookingServiceApi/BookingServiceApi.csproj --connection "${{ secrets.AZURE_SQL_CONNECTION }}"
 
       
       - name: Login to Azure
@@ -75,6 +72,7 @@ jobs:
           package: .
 
           
+
 
 
 
