--- a/.github/workflows/main_grupp14-bookingservice.yml
+++ b/.github/workflows/main_grupp14-bookingservice.yml
@@ -29,6 +29,20 @@ jobs:
       - name: dotnet publish
         run: dotnet publish ./BookingService.sln -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
+      - name: Install dotnet-ef tool
+        run: dotnet tool install --global dotnet-ef --version 9.0.9
+
+      - name: Add dotnet-ef to PATH
+        shell: pwsh
+        run: |
+          $env:PATH += ";$HOME\.dotnet\tools"
+          echo "PATH=$env:PATH" >> $env:GITHUB_ENV
+          
+      - name: Apply EF Core migrations
+        run: dotnet ef database update --project ./BookingService/Data/Data.csproj --startup-project ./BookingService/BookingServiceAPI/BookingServiceAPI.csproj --context ScheduleContext
+        env:
+          ConnectionStrings__DefaultConnection: ${{ secrets.AZURE_SQL_CONNECTION }}
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -68,6 +82,7 @@ jobs:
           package: .
 
           
+
 
 
 
