--- a/.github/workflows/main_grupp14-bookingservice.yml
+++ b/.github/workflows/main_grupp14-bookingservice.yml
@@ -81,7 +81,11 @@ jobs:
           slot-name: 'Production'
           package: .
 
+        env:
+          ScheduleServiceBaseUrl: ${{ secrets.SCHEDULESERVICEBASEURL }}
+
           
+
 
 
 
